2004-09-12  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/dbus.defs: Don't wrap GProxy any more, it's
	effectively the same as a remote object. The caller of pop-message
	owns the result. Add a short TODO, and ignore about 70 procedures
	(101 left).

	* gnome/gw/dbus-spec.scm (initialize): Add a type rule for
	DBusPendingCall**. Doesn't work though.

2004-09-11  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/dbus.defs: Add wrappings for DBusConnection,
	DBusMessage, DBusGProxy. Ignore some functions.

	* gnome/dbus.scm: Added helper "service" and "remote object"
	classes, along with some helper methods:
	dbus-connection-get-service, get-object, invoke.

	* gnome/gw/dbus-support.[ch]: Implemented Guile-specific functions
	dbus-message-iter-get, dbus-message-iter-append,
	dbus-message-get-iter, dbus-message-get-append-iter. Wrapped
	dbus-connection-get-unix-user.

	* gnome/dbus.scm: Documented dbus-message-iter-get and
	dbus-message-iter-append, which are provided by the Guile wrapper.

2004-09-09  Andy Wingo  <wingo@pobox.com>

	* Initial import.
